...
            OutlinedTextField(
                value = nombre.value,
                onValueChange = {
                    nombre.value = it
                    nombreError.value = false // Limpiar error al cambiar el valor
                },
                label = { Text("Nombre", color = Color.Gray) },
                placeholder = { Text("Ingresa tu nombre", color = Color.LightGray) },
                modifier = Modifier
                    .fillMaxWidth()
                    .clip(RoundedCornerShape(30.dp)) // Bordes redondeados
                    .padding(10.dp),
                keyboardOptions = KeyboardOptions.Default,
...
            OutlinedTextField(
                value = apellido.value,
                onValueChange = {
                    apellido.value = it
                    apellidoError.value = false // Limpiar error al cambiar el valor
                },
                label = { Text("Apellido", color = Color.Gray) },
                placeholder = { Text("Ingresa tu apellido", color = Color.LightGray) },
                modifier = Modifier
                    .fillMaxWidth()
                    .clip(RoundedCornerShape(30.dp)) // Bordes redondeados
                    .padding(10.dp),
                keyboardOptions = KeyboardOptions.Default,
...
            OutlinedTextField(
                value = correo.value,
                onValueChange = {
                    correo.value = it
                    correoError.value = !isValidEmail(it) // Validación en tiempo real
                },
                label = { Text("Correo electrónico", color = Color.Gray) },
                placeholder = { Text("ejemplo@correo.com", color = Color.LightGray) },
                modifier = Modifier
                    .fillMaxWidth()
                    .clip(RoundedCornerShape(30.dp)) // Bordes redondeados
                    .padding(10.dp),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email), // Teclado de email
...
                    errorBorderColor = Color.Red,
                    cursorColor = Color(0xFF0367A6)
                )
            )
//            if (correoError.value) {
//                Text(
//                    text = "Correo inválido",
//                    color = Color.Red,
//                    style = MaterialTheme.typography.bodySmall,
//                    modifier = Modifier.align(Alignment.Start)
//                )
//            }

...
                    // Asegura que solo se ingresen números y no más de 9 dígitos
                    if (it.length <= 9 && it.matches("^[0-9]*$".toRegex())) {
                        celular.value = it
                    }
                    celularError.value = celular.value.isEmpty() || celular.value.length != 9
                },
                label = { Text("Celular", color = Color.Gray) },
                placeholder = { Text("Ingresa tu celular", color = Color.LightGray) },
                modifier = Modifier
                    .fillMaxWidth()
                    .clip(RoundedCornerShape(30.dp)) // Bordes redondeados
                    .padding(10.dp),
                keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Number), // Teclado numérico
...
            )

            // Contraseña y Confirmar Contraseña
            PasswordField(
                value = contrasena.value,
                onValueChange = { contrasena.value = it },
                label = "Contraseña",
                showPassword = showPassword.value,
                onTogglePasswordVisibility = { showPassword.value = !showPassword.value }
            )

            PasswordField(
                value = confirmarContrasena.value,
                onValueChange = { confirmarContrasena.value = it },
                label = "Confirmar Contraseña",
                showPassword = showConfirmPassword.value,
                onTogglePasswordVisibility = { showConfirmPassword.value = !showConfirmPassword.value }
            )

            // Botón Registrarse
            Button(
...
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.primary,
                    contentColor = Color.White
                )
            ) {
                Text(
                    text = "Registrarse",
                    fontSize = 20.sp,
                    fontWeight = FontWeight.Bold
                )
            }
        }
    }
...
        initialDisplayedMonthMillis = selectedDateMillis
    )

    OutlinedTextField(
        value = selectedDate,
        onValueChange = { newText -> onDateSelected(newText) },
        label = { Text("Fecha de Nacimiento", color = Color.Gray) },
        readOnly = true,
        trailingIcon = {
            IconButton(onClick = { showDatePicker = true }) {
                Icon(
                    imageVector = Icons.Default.DateRange,
                    contentDescription = "Seleccionar fecha",
...
